Fix sidebar spacing

--- a/src/styles/components/sites/_player-controls.scss
+++ b/src/styles/components/sites/_player-controls.scss
@@ -3,6 +3,7 @@
   display: flex;
   height: 80px;
   justify-content: space-between;
+  position: relative;
   width: 100%;
 
   .control-group {
@@ -139,7 +140,8 @@
     .control-group:last-of-type {
       background: white;
       border-left: 2px solid var(--gray-150);
-      transform: translateX(300px);
+      position: absolute;
+      right: -18.5rem;
     }
   }
 }
