--- a/src/styles/pages/sites/[site_id]/_player.scss
+++ b/src/styles/pages/sites/[site_id]/_player.scss
@@ -26,7 +26,7 @@
     }
 
     &.open {
-      padding-right: 300px;
+      padding-right: 18.5rem;
     }
   }
 
